// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberInfoDropdown Should match snapshot in closed with data 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: #295FF4;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c6:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c6:hover:enabled {
  border-color: #fff;
}

.c6:active:enabled {
  border: 1px solid #303338;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c3 {
  display: none;
  border: 1px solid #303338;
  border-radius: 10px;
  padding-top: 0.25rem;
  position: absolute;
  background-color: #1B1D1F;
  z-index: 9999;
  width: 100%;
  min-width: 200px;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 .c2 {
  left: 0;
  right: auto;
}

.c4 {
  padding: 20px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 14px;
  padding-bottom: 8px;
}

.c7 {
  margin-top: 12px;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c3 {
    height: 100vh;
    width: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    display: none;
    border: none;
  }
}

<div>
   
  <div
    class="c0 c1"
    data-testid="member-actions-button"
  >
    <button>
      Open
    </button>
    <div
      class="c2 c0 c3"
    >
      
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          votingPower
           
          <span>
            50%
          </span>
        </div>
        <div
          class="c5"
        >
          locked
           
          <span>
            0 GT
          </span>
        </div>
        <div
          class="c5"
        >
          unlockedIn
           
          <span>
            a day
          </span>
        </div>
        <button
          class="c6 c7"
        >
          increaseVotingPower
        </button>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`MemberInfoDropdown Should match snapshot in closed without data 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: #295FF4;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c6:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c6:hover:enabled {
  border-color: #fff;
}

.c6:active:enabled {
  border: 1px solid #303338;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c3 {
  display: none;
  border: 1px solid #303338;
  border-radius: 10px;
  padding-top: 0.25rem;
  position: absolute;
  background-color: #1B1D1F;
  z-index: 9999;
  width: 100%;
  min-width: 200px;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 .c2 {
  left: 0;
  right: auto;
}

.c4 {
  padding: 20px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 14px;
  padding-bottom: 8px;
}

.c7 {
  margin-top: 12px;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c3 {
    height: 100vh;
    width: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    display: none;
    border: none;
  }
}

<div>
   
  <div
    class="c0 c1"
    data-testid="member-actions-button"
  >
    <button>
      Open
    </button>
    <div
      class="c2 c0 c3"
    >
      
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          votingPower
           
          <span>
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 40px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <div
          class="c5"
        >
          locked
           
          <span>
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 40px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <div
          class="c5"
        >
          unlockedIn
           
          <span>
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 40px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <button
          class="c6 c7"
        >
          increaseVotingPower
        </button>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`MemberInfoDropdown Should match snapshot when open with data 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: #295FF4;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c6:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c6:hover:enabled {
  border-color: #fff;
}

.c6:active:enabled {
  border: 1px solid #303338;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c3 {
  display: block;
  border: 1px solid #303338;
  border-radius: 10px;
  padding-top: 0.25rem;
  position: absolute;
  background-color: #1B1D1F;
  z-index: 9999;
  width: 100%;
  min-width: 200px;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 .c2 {
  left: 0;
  right: auto;
}

.c4 {
  padding: 20px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 14px;
  padding-bottom: 8px;
}

.c7 {
  margin-top: 12px;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c3 {
    height: 100vh;
    width: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    display: block;
    border: none;
  }
}

<div>
   
  <div
    class="c0 c1"
    data-testid="member-actions-button"
  >
    <button>
      Open
    </button>
    <div
      class="c2 c0 c3"
    >
      
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          votingPower
           
          <span>
            50%
          </span>
        </div>
        <div
          class="c5"
        >
          locked
           
          <span>
            0 GT
          </span>
        </div>
        <div
          class="c5"
        >
          unlockedIn
           
          <span>
            a day
          </span>
        </div>
        <button
          class="c6 c7"
        >
          increaseVotingPower
        </button>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`MemberInfoDropdown Should match snapshot when open without data 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: #295FF4;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c6:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c6:hover:enabled {
  border-color: #fff;
}

.c6:active:enabled {
  border: 1px solid #303338;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c3 {
  display: block;
  border: 1px solid #303338;
  border-radius: 10px;
  padding-top: 0.25rem;
  position: absolute;
  background-color: #1B1D1F;
  z-index: 9999;
  width: 100%;
  min-width: 200px;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 .c2 {
  left: 0;
  right: auto;
}

.c4 {
  padding: 20px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 14px;
  padding-bottom: 8px;
}

.c7 {
  margin-top: 12px;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c3 {
    height: 100vh;
    width: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    display: block;
    border: none;
  }
}

<div>
   
  <div
    class="c0 c1"
    data-testid="member-actions-button"
  >
    <button>
      Open
    </button>
    <div
      class="c2 c0 c3"
    >
      
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          votingPower
           
          <span>
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 40px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <div
          class="c5"
        >
          locked
           
          <span>
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 40px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <div
          class="c5"
        >
          unlockedIn
           
          <span>
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 40px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <button
          class="c6 c7"
        >
          increaseVotingPower
        </button>
      </div>
    </div>
  </div>
   
</div>
`;
